# parol

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile.toml  README.md  basic-exp.par  basic.par  build.rs  build_parsers.ps1  json-exp.par  json.par  language-configuration.json  number.json  oberon2-exp.par  oberon2.par  package-lock.json  package.json  parol_ls-exp.par  parol_ls.par  parol_toml-exp.par  parol_toml.par  parse_examples.ps1  parse_tests.ps1  run_parsers.ps1  test.bas  tsconfig.json  vsc-extension-quickstart.md
book/: README.md  (+1 more)
crates/error-report/: Cargo.toml
crates/error-report/src/: lib.rs  reports.rs
crates/parol/: .gitignore  CHANGELOG.md  Cargo.toml  CommonReadMe.md  README.md  RepositoryReadMeSupplement.md  build_parsers.ps1  run_parsers.ps1  sync_readmes.ps1
crates/parol-errors/: Cargo.toml
crates/parol-errors/src/: lib.rs
crates/parol-ls/: CHANGELOG.md  Cargo.toml  README.md  build.rs  parol_ls-exp.par  parol_ls.par
crates/parol-ls/data/expected/: complex1.par  line_comment_in_production_causes_line_break.par  multiple_non_terminals_and_terminals_in_one_production.par  multiple_non_terminals_in_one_production.par  production_with_two_alternations.par  production_with_two_long_wrapped_alternations.par  single_alternation.par  single_group.par  single_optional.par  single_repeat.par  test1.par  wrapped_long_production.par
crates/parol-ls/data/input/: block_comments_before_start.par  complex1.par  line_comment_before_end_of_prod_causes_line_break.par  line_comment_between_alternations_causes_line_break.par  line_comment_in_production_causes_line_break.par  line_comments_before_start.par  line_comments_in_scanner_directives.par  list-exp.par  multiple_non_terminals_and_terminals_in_one_production.par  multiple_non_terminals_in_one_production.par  multiple_scanner_states.par  production_with_two_alternations.par  production_with_two_long_wrapped_alternations.par  single_alternation.par  single_group.par  single_optional.par  single_repeat.par  single_scanner_state.par  skip_in_scanner_directives.par  top_level_group_alternatives.par  top_level_optional_alternatives.par  top_level_repeat_alternatives.par  wrapped_long_production.par
crates/parol-ls/src/: arguments.rs  ast.rs  config.rs  convert_to_rng.rs  diagnostics.rs  document_state.rs  document_symbol.rs  errors.rs  format.rs  handler.rs  main.rs  parol_ls_grammar.rs  parol_ls_grammar_trait.rs  parol_ls_parser.rs  recursion.rs  rng.rs  server.rs  symbol_def.rs  utils.rs
crates/parol-ls/src/formatting/: comments.rs  context.rs  fmt_options.rs  format.rs  indent.rs  line.rs  mod.rs  settings.rs
crates/parol-macros/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/parol-macros/src/: macros.rs
crates/parol/benches/: analysis_benchmark.rs  k_tuples_k_concat_benchmark.rs
crates/parol/bindings/: Child.ts  ChildAttribute.ts  ChildrenType.ts  Function.ts  Instance.ts  InstanceEntrails.ts  MetaSymbolKind.ts  Mutability.ts  NodeName.ts  NodeTypesInfo.ts  NonTerminalInfo.ts  NonTerminalName.ts  NonTerminalStructure.ts  ProductionAttribute.ts  README.md  ReferenceType.ts  Scope.ts  ScopeId.ts  ScopedNameId.ts  Symbol.ts  SymbolAttribute.ts  SymbolId.ts  SymbolKind.ts  SymbolTable.ts  TerminalInfo.ts  TerminalName.ts  Type.ts  TypeEntrails.ts  UserDefinedTypeName.ts
crates/parol/data/invalid/: conflicting-token-aliases.par  empty-group.par  empty-optional.par  empty-repetition.par  empty-scanner-state.par  indirect-left-recursion.par  (+1 more)
crates/parol/docs/: Approach.md  ListExample.md  QuickStart.md  Tools.md  Tutorial.md  TutorialOld.md
crates/parol/schemas/: parser-export-model.v1.schema.json  parser-export-model.v2.schema.json
crates/parol/src/: build.rs  lib.rs
crates/parol/templates/: enum_range_calc.rs.tpl  lookahead_dfa.dot  non_terminal_type_struct_template.rs.tpl  non_terminal_type_vec_template.rs.tpl  par_template.par  parser_dfas_template.rs.tpl  parser_productions_template.rs.tpl  parser_template.rs.tpl  range_calculation.rs.tpl  scanner_build_info.rs.tpl  user_trait_template.rs.tpl
crates/parol/tests/: builder_add_derives_tests.rs  command_line_arguments_tests.rs  cs_integration_tests.rs  export_api_tests.rs  export_schema_contract_tests.rs  parol_new.rs  reproduction_tests.rs  run_examples.rs  skip_directive_validation_tests.rs
examples/basic_interpreter/: .gitignore  Cargo.toml  README.md  basic-exp.par  basic.par  basic_grammar.rs  basic_grammar_trait.rs  basic_parser.rs  build.rs  errors.rs  main.rs  operators.rs  parse_tests.ps1
examples/basic_interpreter/src/: basic_grammar.rs  basic_grammar_trait.rs  basic_parser.rs  errors.rs  main.rs  operators.rs
examples/calc_lr/: Cargo.toml  README.md  assign_operator.rs  build.rs  calc-exp.par  calc.par  calc_grammar.rs  calc_grammar_trait.rs  calc_nodes.rs  calc_parser.rs  errors.rs  main.rs  test.txt
examples/json_parser/: .gitignore  Cargo.toml  README.md  errors.rs  json-exp.par  json.par  json_grammar_trait.rs  json_parser.rs  main.rs  parse_examples.ps1
examples/json_parser/json/: array.json
examples/json_parser/src/: errors.rs  json_grammar.rs  json_grammar_trait.rs  json_parser.rs  main.rs
examples/json_parser_auto/: Cargo.toml  build.rs  json-exp.par  json.par  json_grammar_trait.rs  json_parser.rs  main.rs  parse_examples.ps1
examples/json_parser_auto/src/: json_grammar.rs  json_grammar_trait.rs  json_parser.rs  main.rs
examples/list_lr/: Cargo.toml  build.rs  list-exp.par  list.par  list_grammar.rs  list_grammar_trait.rs  list_parser.rs  list_test.txt  main.rs
examples/oberon2/: CHANGELOG.md  Cargo.toml  README.md  build.rs  main.rs  oberon2-exp.par  oberon2.par  oberon2_grammar_trait.rs  oberon2_parser.rs  parse_tests.ps1
examples/oberon2/Oberon2Source/: Array.mod  Case.mod  Constants.mod  Days.mod  Fib.mod  For.mod  Gcd.mod  Hello.mod  IfElse.mod  Procedure.mod  Records.mod  Trees.mod  Values.mod  VarParam.mod  Variables.mod  While.mod  partest.mod
examples/oberon2/src/: main.rs  oberon2_grammar.rs  oberon2_grammar_trait.rs  oberon2_parser.rs
(+861 files in other folders)
