[workspace]

resolver = "2"

members = [
  "crates/*",
  "examples/basic_interpreter",
  "examples/json_parser",
  "examples/json_parser_auto",
  "examples/oberon2",
  "examples/toml"
]

exclude = [
  "examples/boolean_parser",
  "examples/calc",
  "examples/calc_auto",
  "examples/json",
  "examples/keywords",
  "examples/keywords2",
  "examples/list",
  "examples/list_auto",
  "examples/oberon_0",
  "examples/scanner_states",
  "crates/parol/tests/snapshots/bin",
  "crates/parol/tests/snapshots/lib",
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = [ "derive", "cargo" ] }
derive_builder = "0.12.0"
derive-new = "0.6.0"
env_logger = "0.10.1"
function_name = "0.3.0"
petgraph = "0.6.4"
syntree = "0.14.5"
syntree_layout = "0.2.0"
log = "0.4.20"
once_cell = "1.19"
regex = "1.10"
thiserror = "1.0"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
debug = true

[profile.bench]
debug = true

[profile.release]
lto = true
