[workspace]

resolver = "2"

members = ["crates/*"]

exclude = [
  "crates/parol/tests/snapshots/bin",
  "crates/parol/tests/snapshots/lib",
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
derive_builder = "0.20.2"
derive-new = "0.7.0"
env_logger = "0.11.8"
function_name = "0.3.0"
petgraph = "0.8.2"
syntree = "0.18.0"
syntree_layout = "0.4.0"
log = "0.4.27"
once_cell = "1.21"
regex = "1.11"
scnr2 = { git = "https://github.com/jsinger67/scnr2.git", version = "0.2.0", tag = "taichi-ishitani" }
thiserror = "2.0"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
debug = true


[profile.bench]
debug = true

[profile.release]
lto = true
debug = true