[workspace]

resolver = "2"

members = ["crates/*"]

exclude = [
  "crates/parol/tests/snapshots/bin",
  "crates/parol/tests/snapshots/lib",
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
derive_builder = "0.20.2"
derive-new = "0.7.0"
env_logger = "0.11.9"
function_name = "0.3.0"
petgraph = "0.8.3"
syntree = "0.18.0"
syntree_layout = "0.4.0"
log = "0.4.29"
once_cell = "1.21"
regex = "1.12"
scnr2 = "0.5.0"
scnr2_generate = "0.5.0"
thiserror = "2.0"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
debug = true


[profile.bench]
debug = true

[profile.release]
lto = true
debug = true