[package]
name = "error-report"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "error report with codespan-reporting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
codespan-reporting = "0.11.1"
parol-errors = { path = "../parol-errors", version = "0.1.0" }
parol_runtime = { path = "../parol_runtime", version = "0.12.0-alpha.2", features = ["auto_generation"] }
thiserror = "1.0.38"
