[package]
name = "parol-errors"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "parols error types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
parol_runtime = { path = "../parol_runtime", version = "0.12.0-alpha.2", features = ["auto_generation"] }
thiserror = "1.0.38"
