[package]
name = "parol-ls"
version = "4.0.1"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "Language server for parol parser generator"
documentation = "https://docs.rs/parol-ls"
repository = "https://github.com/jsinger67/parol/tree/main/crates/parol-ls"
readme = "README.md"
keywords = ["language-server", "parsing", "parser-generator"]
categories = ["algorithms", "parsing", "text-editors"]
license = "MIT OR Apache-2.0"
edition = "2024"
default-run = "parol-ls"
exclude = ["./data"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
derive-new = { workspace = true }
env_logger = { workspace = true }
function_name = { workspace = true }
syntree = { workspace = true }
log = { workspace = true }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
once_cell = { workspace = true }
parol = { path = "../parol", version = "4.0.0" }
parol_runtime = { path = "../parol_runtime", version = "4.0.0" }
parol-macros = { path = "../parol-macros", version = "1.0.0" }
regex = { workspace = true }
scnr2 = { workspace = true }
serde = "1.0.224"
serde_json = "1.0.143"
thiserror = { workspace = true }

[build-dependencies]
parol = { path = "../parol", version = "4.0.0" }
