[package]
name = "parol"
version = "0.26.1"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "LL(k) parser generator for Rust"
default-run = "parol"
documentation = "https://docs.rs/parol"
repository = "https://github.com/jsinger67/parol/tree/main/crates/parol"
readme = "README.md"
keywords = ["parser", "parsing", "parser-generator", "LLk"]
categories = ["algorithms", "parsing", "Parsing tools"]
license = "MIT/Apache-2.0"
edition = "2021"
exclude = ["/tests", "/data", "/bindings"]

[dependencies]
anyhow = { workspace = true }
assert_cmd = "2.0"
bitflags = "2.5.0"
cfg-if = "1.0.0"
clap = { workspace = true }
derive_builder = { version = "0.20.0" }
env_logger = { workspace = true }
function_name = { workspace = true }
num_cpus = "1.16.0"
owo-colors = "4.0.0"
parol_runtime = { path = "../parol_runtime", version = "0.20.2", features = [
    "auto_generation",
] }
parol-macros = { path = "../parol-macros", version = "0.2.0" }
petgraph = { workspace = true }
rand = "0.8.5"
rand_regex = "0.17.0"
regex = { workspace = true }
regex-syntax = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
] }
syntree = { workspace = true }
syntree_layout = { workspace = true }
thiserror = { workspace = true }
ts-rs = "8.1.0"
ume = "0.1"
rayon = "1.9.0"
tempfile = "3"
graph-cycles = "0.1.0"

[features]
default = ["build"]
# Includes logic for invoking from build.rs script
build = []

[[bin]]
name = "parol"
required-features = ["build"]

[[example]]
name = "boolean_parser"
path = "../../examples/boolean_parser/main.rs"

[[example]]
name = "calc"
path = "../../examples/calc/main.rs"

[[example]]
name = "calc_auto"
path = "../../examples/calc_auto/main.rs"

[[example]]
name = "keywords"
path = "../../examples/keywords/main.rs"

[[example]]
name = "keywords2"
path = "../../examples/keywords2/main.rs"

[[example]]
name = "list"
path = "../../examples/list/main.rs"

[[example]]
name = "list_auto"
path = "../../examples/list_auto/main.rs"

[[example]]
name = "oberon_0"
path = "../../examples/oberon_0/main.rs"

[[example]]
name = "scanner_states"
path = "../../examples/scanner_states/main.rs"

[[bench]]
name = "k_tuples_k_concat_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4"
assert_cmd = "2.0"
tempfile = "3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
