[package]
name = "parol"
version = "1.0.4"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "LL(k) and LALR(1) parser generator for Rust"
default-run = "parol"
documentation = "https://docs.rs/parol"
repository = "https://github.com/jsinger67/parol/tree/main/crates/parol"
readme = "README.md"
keywords = ["parser", "parsing", "parser-generator", "LLk"]
categories = ["algorithms", "parsing"]
license = "MIT/Apache-2.0"
edition = "2021"
exclude = ["/tests", "/data", "/bindings"]

[dependencies]
anyhow = { workspace = true }
assert_cmd = "2.1"
bitflags = "2.11.0"
cfg-if = "1.0.4"
clap = { workspace = true }
derive_builder = { version = "0.20.2" }
env_logger = { workspace = true }
function_name = { workspace = true }
num_cpus = "1.17.0"
owo-colors = "4.3.0"
parol_runtime = { path = "../parol_runtime", version = "1.0.1", features = [
    "auto_generation",
] }
parol-macros = { path = "../parol-macros", version = "1.0.0" }
petgraph = { workspace = true }
rand = "0.9.2"
rand_regex = "0.18.1"
regex = { workspace = true }
regex-syntax = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
] }
syntree = { workspace = true }
syntree_layout = { workspace = true }
thiserror = { workspace = true }
ts-rs = "12.0.1"
ume = "0.1"
rayon = "1.11.0"
tempfile = "3"
lalry = "0.1.0"

[features]
default = ["build"]
# Includes logic for invoking from build.rs script
build = []

[[bin]]
name = "parol"
required-features = ["build"]

[[example]]
name = "basic"
path = "../../examples/basic_interpreter/main.rs"

[[example]]
name = "boolean_parser"
path = "../../examples/boolean_parser/main.rs"

[[example]]
name = "calc"
path = "../../examples/calc/main.rs"

[[example]]
name = "calc_auto"
path = "../../examples/calc_auto/main.rs"

[[example]]
name = "calc_lr"
path = "../../examples/calc_lr/main.rs"

[[example]]
name = "json_parser"
path = "../../examples/json_parser/main.rs"

[[example]]
name = "json_parser_auto"
path = "../../examples/json_parser_auto/main.rs"

[[example]]
name = "keywords"
path = "../../examples/keywords/main.rs"

[[example]]
name = "keywords2"
path = "../../examples/keywords2/main.rs"

[[example]]
name = "list"
path = "../../examples/list/main.rs"

[[example]]
name = "list_auto"
path = "../../examples/list_auto/main.rs"

[[example]]
name = "list_lr"
path = "../../examples/list_lr/main.rs"

[[example]]
name = "oberon_0"
path = "../../examples/oberon_0/main.rs"

[[example]]
name = "oberon2"
path = "../../examples/oberon2/main.rs"

[[example]]
name = "scanner_states"
path = "../../examples/scanner_states/main.rs"

[[example]]
name = "scanner_states_lr"
path = "../../examples/scanner_states_lr/main.rs"

[[example]]
name = "toml"
path = "../../examples/toml/main.rs"


[[bench]]
name = "k_tuples_k_concat_benchmark"
harness = false

[dev-dependencies]
criterion = "0.8.2"
pretty_assertions = "1.4"
assert_cmd = "2.1"
tempfile = "3"
quickcheck = "1.0.3"
quickcheck_macros = "1.2.0"
