[package]
name = "basic"
version = "0.5.0"
edition = "2021"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "Example use of parol - Partial Basic Interpreter"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
env_logger = "0.10.0"
error-report = { path = "../../crates/error-report" }
function_name = "0.3.0"
id_tree = "^1.8"
id_tree_layout = "2.0.3"
log = "0.4.14"
parol = { path = "../../crates/parol" }
parol_runtime = { path = "../../crates/parol_runtime", features = ["auto_generation"] }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = "^1.0"

[build-dependencies]
parol = { path = "../../crates/parol" }

[dev-dependencies]
regex = "1.5.5"
