[package]
name = "basic"
version = "0.5.0"
edition = "2021"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "Example use of parol - Partial Basic Interpreter"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
function_name = { workspace = true }
id_tree = { workspace = true }
id_tree_layout = { workspace = true }
log = { workspace = true }
parol = { path = "../../crates/parol" }
parol_runtime = { path = "../../crates/parol_runtime", features = ["auto_generation"] }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = { workspace = true }

[build-dependencies]
parol = { path = "../../crates/parol" }
