[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
parol_runtime = { path = "../../crates/parol_runtime", features = ["auto_generation"] }
parol = { path = "../../crates/parol" }
thiserror = { workspace = true }

[build-dependencies]
parol_runtime = { path = "../../crates/parol_runtime", features = ["auto_generation"] }
parol = { path = "../../crates/parol" }
env_logger = { workspace = true }

[[example]]
name = "calc_lr"
path = "main.rs"
