[package]
name = "json_parser"
version = "0.5.0"
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
env_logger = "0.10.0"
id_tree = "1.8.0"
id_tree_layout = "2.0.3"
log = "0.4.16"
miette = { version = "5.2.0", features = ["fancy"] }
parol_runtime = { path = "../../crates/parol_runtime" }
thiserror = "1.0.30"

[build-dependencies]
parol = { path = "../../crates/parol" }
