[package]
name = "json_parser"
version = "0.5.0"
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
env_logger = "0.10.0"
id_tree = "1.8.0"
id_tree_layout = "2.0.3"
log = "0.4.16"
miette = { version = "5.5.0", features = ["fancy"] }
parol_runtime = { path = "../../crates/parol_runtime" }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = "1.0.30"

[build-dependencies]
parol = { path = "../../crates/parol" }
