[package]
name = "json_parser"
version = "0.5.0"
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
id_tree = { workspace = true }
id_tree_layout = { workspace = true }
log = { workspace = true }
parol_runtime = { path = "../../crates/parol_runtime" }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = { workspace = true }

[build-dependencies]
parol = { path = "../../crates/parol" }
