[package]
name = "json_parser_auto"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[dependencies]
derive_builder = "^0.11"
env_logger = "0.9.0"
function_name = "0.3.0"
id_tree = "^1.8"
log = "0.4.17"
miette = { version = "^5.3", features = ["fancy"] }
parol_runtime = { path = "../../crates/parol_runtime", features = ["trim_parse_tree", "auto_generation"] }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = "^1.0"

[build-dependencies]
parol = { path = "../../crates/parol" }
