[package]
name = "json_parser_auto"
version = "0.4.0"
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
derive_builder = "0.12.0"
env_logger = "0.10.0"
function_name = "0.3.0"
id_tree = "^1.8"
log = "0.4.17"
miette = { version = "^5.3", features = ["fancy"] }
parol_runtime = { path = "../../crates/parol_runtime", features = ["trim_parse_tree", "auto_generation"] }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = "^1.0"

[build-dependencies]
parol = { path = "../../crates/parol" }
