[package]
name = "json_parser_auto"
version = "0.4.0"
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
derive_builder = { workspace = true }
env_logger = { workspace = true }
function_name = { workspace = true }
id_tree = { workspace = true }
log = { workspace = true }
parol_runtime = { path = "../../crates/parol_runtime", features = ["auto_generation"] }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = { workspace = true }

[build-dependencies]
parol = { path = "../../crates/parol" }
