[package]
name = "oberon2"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
function_name = { workspace = true }
syntree = { workspace = true }
log = { workspace = true }
parol_runtime = { path = "../../crates/parol_runtime", features = ["auto_generation"] }
parol-macros = { path = "../../crates/parol-macros" }
thiserror = { workspace = true }

[build-dependencies]
parol = { path = "../../crates/parol" }
