[package]
name = "snapshot_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
parol_runtime = { version = "0.11.0", features = ["auto_generation"] }
thiserror = "1.0"

[build-dependencies]
parol = { git = "https://github.com/jsinger67/parol.git", version = "0.15.0-alpha.3" }
